syntax = "proto3";

package chat;

option go_package = "github.com/manhrev/runtracking/backend/chat/pkg/api;chat";
import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

service Chat {
    rpc GetHistoryChat(GetHistoryChatRequest) returns(GetHistoryChatReply) {};
    rpc SendMessage(SendMessageRequest) returns(SendMessageReply) {};
    rpc DeleteConversation(DeleteConversationRequest) returns(DeleteConversationReply) {};
}

message DeleteConversationRequest{
    int64 to_user_id = 1;
}

message DeleteConversationReply{}

message GetHistoryChatRequest{
    int64 to_user_id = 2;
    uint32 limit = 3;
    uint64 offset = 4;
}
message GetHistoryChatReply{
    repeated MessageInfo messageInfoList = 1;
    int64 total = 2;
}

message MessageInfo{
    int64 id = 1;
    string message = 2;
    int64 from_user_id = 3;
    int64 to_user_id = 4;
    google.protobuf.Timestamp time = 5; 

    //use to check receiver has seen or not
    bool is_to_user_seen = 6;
}

message SendMessageRequest{
    string message = 1;
    int64 to_user_id = 2;
    google.protobuf.Timestamp time = 3; 
}
message SendMessageReply{}




